--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,12 +4,12 @@ description: A json DB.
 # homepage: https://www.example.com
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '>=2.15.0'
 
 dependencies:
   file: ^6.1.2
-  g_json: ^4.0.0
+  path: ^1.8.2
+  g_json: ^4.1.0    # 4.0.0
 
 dev_dependencies:
-  pedantic: ^1.9.0
-  test: ^1.14.4
+  test: ^1.21.4
