--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: iris_db
-version: 0.0.5+1
-description: A json DB.
+version: 0.0.5+2
+description: A json DB, support web.
 # homepage: https://www.example.com
 
 environment:
