--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,15 +1,15 @@
 name: iris_db
-version: 0.0.5+4
+version: 0.0.6+1
 description: A json DB, support web.
 # homepage: https://www.example.com
 
 environment:
-  sdk: '>=2.15.0'
+  sdk: '>=2.17.0'
 
 dependencies:
-  file: ^6.1.4
-  path: ^1.8.3
-  g_json: ^4.1.0
+  file: 6.1.4
+  path: 1.8.3
+  g_json: 4.1.0
 
 dev_dependencies:
-  test: ^1.22.2
+  test: ^1.23.1
