--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,12 +4,12 @@ description: A json DB, support web.
 # homepage: https://www.example.com
 
 environment:
-  sdk: '>=2.17.0'
+  sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
-  file: 6.1.4
+  file: ^7.0.0
   path: 1.8.3
   g_json: 4.1.0
 
 dev_dependencies:
-  test: ^1.24.2
+  test: ^1.24.3
