--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: iris_db
 version: 0.1.3
-description: A json DB, support web.
+description: A json DB (Database), support web.
 # homepage: https://www.example.com
 
 environment:
