--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: iris_db
-version: 0.1.4
+version: 0.1.6
 description: A json DB (Database), support web.
 # homepage: https://www.example.com
 
@@ -8,7 +8,7 @@ environment:
 
 dependencies:
   file: ^7.0.0
-  path: 1.8.3
+  path: ^1.9.0
   g_json: 4.1.0
 
 dev_dependencies:
